# InternetShop

./: .coverage  .gitignore  DECISIONS.md  PROJECT_PROGRESS.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 875938deb666_create_categories_table.py  93060cbc6746_added_product_table.py
app/: main.py
app/api/: categoriesAPI.py  categoryAPI.py  productAPI.py
app/core/: config.py  dependencies.py  exception_handler.py  exceptions.py  logger.py
app/db/: base.py  database.py
app/models/: __init__.py  category.py  categoryModel.py  categoryModels.py  productModel.py
app/repositories/: categoryRepository.py  productRepository.py
app/schemas/: category.py  categorySchemas.py  productSchemas.py
app/services/: productService.py
tests/: test_product_repository.py  test_product_service.py
