[project]
name = "internetshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "loguru>=0.7.3",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pytest-sugar>=1.1.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
    testpaths=["tests/"]
    asyncio_mode="auto"
    pythonpath = ["."]
    addopts = [
    "--no-header",
]
